--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,3 +11,17 @@
 body {
   background-color: #0f0f0f;
 }
+
+::-webkit-scrollbar {
+  width: 7px;
+  height: 4px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #0f0f0f;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #c1c1c1;
+  border-radius: 20px;
+}
